Adding Day 2 and filled in code from Day 1

--- a/Agenda.ipynb
+++ b/Agenda.ipynb
@@ -6,32 +6,39 @@
    "source": [
     "# Agenda for Advanced Python\n",
     "## Day 1\n",
-    "1. Review key intermediate Python concepts\n",
-    "2. Decorators\n",
-    "3. Iterators & Generators\n",
-    "4. Virtualenv & Packaging and using setup tools\n",
-    "5. Python DB setup & Lab\n",
-    "6. (Optional) Metaprogramming\n",
+    "1. [DONE] Review key intermediate Python concepts\n",
+    "2. [DONE] Decorators\n",
+    "3. [DONE] Iterators & Generators\n",
+    "5. [DONE] Python DB setup & Lab\n",
     "\n",
     "## Day 2\n",
-    "2. Python with MySQL database\n",
-    "3. Python and Mongo\n",
-    "4. Bottle Web Framework\n",
+    "1. [2 hrs] Virtualenv & Packaging and using setup tools\n",
+    "2. [1 hr] Bottle Web Framework\n",
+    "3. [1.5 hrs] HTML parsing\n",
+    "4. [1.5 hrs] Testing\n",
     "5. Email handling\n",
-    "6. HTML and XML parsing\n",
-    "7. Django\n",
-    "8. Lab\n",
+    "6. Intro to Django\n",
+    "7. (Optional) Metaprogramming\n",
     "\n",
     "## Day 3\n",
-    "1. Socket Programming\n",
-    "2. Web programming: urllib and WSGI\n",
-    "5. Co-routines\n",
-    "6. Processing pipelines\n",
-    "7. Event streams\n",
-    "5. dispy\n",
-    "6. asyncoro\n",
-    "7. Final Lab"
+    "1. Django\n",
+    "2. Socket Programming\n",
+    "3. Web programming: urllib and WSGI\n",
+    "4. Co-routines\n",
+    "5. Processing pipelines\n",
+    "6. Event streams\n",
+    "5. (Optional) dispy\n",
+    "6. (Optional) asyncoro\n",
+    "7. (Optional) Python and Mongo\n",
+    "7. (Optional) Final Lab"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
